[gd_scene load_steps=2 format=3 uid="uid://prison_screen_v1"]

[ext_resource type="Script" path="res://scenes/ui/screens/PrisonScreen.gd" id="1_prison"]

[node name="PrisonScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_prison")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.08, 0.12, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "üëÆ Hapishane"
theme_override_font_sizes/font_size = 40
theme_override_colors/font_color = Color(0.8, 0.3, 0.3, 1)

[node name="BackButton" type="Button" parent="MarginContainer/VBox/Header"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
text = "Geri"
theme_override_font_sizes/font_size = 24

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="MainPanel" type="PanelContainer" parent="MarginContainer/VBox/CenterContainer"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBox/CenterContainer/MainPanel"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBox/CenterContainer/MainPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="IconLabel" type="Label" parent="MarginContainer/VBox/CenterContainer/MainPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "üëÆ"
theme_override_font_sizes/font_size = 80
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="MarginContainer/VBox/CenterContainer/MainPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "‚õìÔ∏è HAPƒ∞SHANEDESƒ∞Nƒ∞Z!"
theme_override_font_sizes/font_size = 36
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
horizontal_alignment = 1

[node name="Separator1" type="HSeparator" parent="MarginContainer/VBox/CenterContainer/MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ReasonLabel" type="Label" parent="MarginContainer/VBox/CenterContainer/MainPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "üìÑ Gerek√ße: ..."
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
autowrap_mode = 3

[node name="TimerLabel" type="Label" parent="MarginContainer/VBox/CenterContainer/MainPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "‚è±Ô∏è Kalan S√ºre: --:--"
theme_override_font_sizes/font_size = 32
theme_override_colors/font_color = Color(1, 0.8, 0.3, 1)
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/VBox/CenterContainer/MainPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
max_value = 100.0
show_percentage = false

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBox/CenterContainer/MainPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Yasalara aykƒ±rƒ± davranƒ±≈ülar nedeniyle hapishanedesiniz. Kefalet √∂deyerek erken √ßƒ±kabilir veya s√ºrenizi tamamlayabilirsiniz."
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
autowrap_mode = 3

[node name="Separator2" type="HSeparator" parent="MarginContainer/VBox/CenterContainer/MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="GemsLabel" type="Label" parent="MarginContainer/VBox/CenterContainer/MainPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "üíé Mevcut: 0 Elmas"
theme_override_font_sizes/font_size = 26
theme_override_colors/font_color = Color(0.5, 0.8, 1, 1)
horizontal_alignment = 1

[node name="BailButton" type="Button" parent="MarginContainer/VBox/CenterContainer/MainPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
text = "üí∞ Kefalet √ñde (? Elmas)"
theme_override_font_sizes/font_size = 28
