extends Control

## Prison Screen
## Displays prison status and allows release via bail.

@onready var reason_label: Label = %ReasonLabel
@onready var timer_label: Label = %TimerLabel
@onready var bail_button: Button = %BailButton
@onready var status_label: Label = %StatusLabel
@onready var back_button: Button = %BackButton
@onready var description_label: Label = %DescriptionLabel
@onready var gems_label: Label = %GemsLabel
@onready var icon_label: Label = %IconLabel
@onready var progress_bar: ProgressBar = %ProgressBar

var timer: Timer
var initial_prison_time: int = 0

func _ready() -> void:
	# Setup Timer for updating countdown
	timer = Timer.new()
	timer.wait_time = 1.0
	timer.timeout.connect(_on_timer_timeout)
	add_child(timer)
	
	# Connect signals
	if bail_button:
		bail_button.pressed.connect(_on_bail_button_pressed)
	if back_button:
		back_button.pressed.connect(_on_back_button_pressed)
	if PrisonManager:
		PrisonManager.prison_released.connect(_on_prison_released)
	
	# Initial update
	_update_ui()
	
	# Start timer after UI is ready
	timer.start()
	print("[PrisonScreen] Timer started, in_prison: ", State.in_prison)

func _on_timer_timeout() -> void:
	# Only update if visible
	if not visible:
		return
		
	_update_ui()
	# Check if released automatically
	State.check_prison_status()

func _update_ui() -> void:
	if not State.in_prison:
		if status_label:
			status_label.text = "âœ… Åu anda Ã¶zgÃ¼rsÃ¼nÃ¼z!"
			status_label.add_theme_color_override("font_color", Color(0.5, 1, 0.5))
		if reason_label:
			reason_label.text = "Burada iÅŸiniz yok."
		if timer_label:
			timer_label.text = ""
		if description_label:
			description_label.text = "GÃ¶lge Ekonomi'de hukuk ve dÃ¼zen saÄŸlanÄ±yor. Yasalara uyduÄŸunuz sÃ¼rece Ã¶zgÃ¼rsÃ¼nÃ¼z!"
		if bail_button:
			bail_button.text = "Kefalet (Gerekmiyor)"
			bail_button.disabled = true
		if icon_label:
			icon_label.text = "ğŸ‘"
		if progress_bar:
			progress_bar.value = 0
			progress_bar.visible = false
		visible = true
		return
	
	visible = true
	
	# In prison
	if icon_label:
		icon_label.text = "ğŸ‘®"
	
	if status_label:
		status_label.text = "â›“ï¸ HAPÄ°SHANESÄ°NÄ°Z!"
		status_label.add_theme_color_override("font_color", Color(1, 0.3, 0.3))
	
	if reason_label:
		reason_label.text = "ğŸ“„ GerekÃ§e: " + State.prison_reason
	
	# Update initial_prison_time if not set or if prison time changed
	if initial_prison_time == 0 or not State.in_prison:
		initial_prison_time = State.prison_release_time - Time.get_unix_time_from_system()
	
	var remaining_sec = State.get_prison_remaining_seconds()
	var mins = remaining_sec / 60
	var secs = remaining_sec % 60
	
	if timer_label:
		timer_label.text = "â±ï¸ Kalan SÃ¼re: %02d:%02d" % [mins, secs]
	
	# Update progress bar
	if progress_bar and initial_prison_time > 0:
		progress_bar.visible = true
		var progress = 1.0 - (float(remaining_sec) / float(initial_prison_time))
		progress_bar.value = progress * 100
	
	# Update Bail Cost
	var gems_needed = max(1, ceil(remaining_sec / 60.0))
	
	if gems_label:
		gems_label.text = "ğŸ’ Mevcut: %d Elmas" % State.gems
	
	if description_label:
		description_label.text = "Yasalara aykÄ±rÄ± davranÄ±ÅŸlar nedeniyle hapishanedesiniz. Kefalet Ã¶deyerek erken Ã§Ä±kabilir veya sÃ¼renizi tamamlayabilirsiniz."
	
	if bail_button:
		bail_button.text = "ğŸ’° Kefalet Ã–de (%d Elmas)" % gems_needed
		
		if State.gems < gems_needed:
			bail_button.disabled = true
			bail_button.tooltip_text = "Yeterli elmasÄ±nÄ±z yok! (%d / %d)" % [State.gems, gems_needed]
		else:
			bail_button.disabled = false
			bail_button.tooltip_text = "Kefalet Ã¶deyerek hemen serbest kalÄ±n"

func _on_bail_button_pressed() -> void:
	if bail_button:
		bail_button.disabled = true
	if status_label:
		status_label.text = "â³ Ä°ÅŸlem yapÄ±lÄ±yor..."
	if PrisonManager:
		PrisonManager.pay_bail()

func _on_back_button_pressed() -> void:
	if get_tree() and get_tree().root:
		var main = get_tree().root.get_node_or_null("Main")
		if main and main.has_method("go_back"):
			main.go_back()

func _on_prison_released(success: bool, message: String) -> void:
	if success:
		if status_label:
			status_label.text = "âœ… Tahliye Edildiniz!"
			status_label.add_theme_color_override("font_color", Color(0.5, 1, 0.5))
		if description_label:
			description_label.text = "Kefalet Ã¶dendiniz. ArtÄ±k Ã¶zgÃ¼rsÃ¼nÃ¼z!"
		await get_tree().create_timer(2.0).timeout
		_update_ui()
	else:
		if status_label:
			status_label.text = "âŒ Hata: " + message
			status_label.add_theme_color_override("font_color", Color(1, 0.3, 0.3))
		if bail_button:
			bail_button.disabled = false
